samples/_failures_safe/1761631812_a86786_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f347776.c: In function ‘dfs’:
./samples/SAFE/__tmp_1f347776.c:179:5: error: expected expression at end of input
  179 |     if (
      |     ^~
./samples/SAFE/__tmp_1f347776.c:179:5: error: expected declaration or statement at end of input
